font file paths and horizontal scrolling fixed

--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -30,7 +30,7 @@
   z-index: 50;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
   .cover {
     max-width: 100%;
   }
